[package]
name = "docker4rs"
version = "0.0.1"
authors = ["Arthur Asatryan <biacoder@gmail.com>"]
description = "Docker REST API implementation"
documentation = "https://docs.rs/docker4rs"
homepage = "https://github.com/Biacode/docker4rs"
repository = "https://github.com/Biacode/docker4rs"
keywords = ["docker", "rest", "api", "client"]
readme = "README.md"
license = "Apache-2.0"
exclude = [
    ".travis.yml",
    ".gitignore",
]
publish = false

[lib]
name = "docker4rs"
path = "src/lib.rs"

[dependencies]
docker4rs-core = { path = "docker4rs-core" }
docker4rs-tcp = { path = "docker4rs-tcp" }

bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"
futures-cpupool = "0.1"

[workspace]
members = ["docker4rs-core", "docker4rs-tcp"]